# PVTree

./: .gitignore  CMakeLists.txt  COPYING.txt  README.md  setupEnvironment.sh
doc/: CMakeLists.txt  Doxyfile.in
programs/: CMakeLists.txt  basicForestSim.cpp  basicLightfieldSimulate.cpp  basicSimulate.cpp  basicVisualize.cpp  batchconverter.cpp  benchmark.cpp  bestTreeVisualizer.cpp  bestyearlyEnergyPlotter.cpp  climateDataTesting.cpp  convergence.cpp  convergenceCombiner.cpp  convertYearly.cpp  converter.cpp  dailyEnergyPlotter.cpp  efficiencyCorrelationPlotter.cpp  forestScan.cpp  initialTest.cpp  leafCheck.cpp  leafSimulate.cpp  leafVisualize.cpp  lightfieldCombiner.cpp  lightfieldTest.cpp  lightfieldTreeScan.cpp  materialConfigurationTest.cpp  ntupleCombiner.cpp  particleSwarmTesting.cpp  persistenceCheck.cpp  randomVisualize.cpp  singleForest.cpp  smartsClimateAffect.cpp  smartsIntegrationTesting.cpp  treeScan.cpp  treeVisualizer.cpp  visualiseBestForest.cpp  visualiseBestYearly.cpp  yearlyDiffuseLightfieldScan.cpp  yearlyEnergyPlotter.cpp  yearlyForestScan.cpp  yearlyLightfieldScan.cpp  (+1 more)
programs/examples_checks/: CMakeLists.txt  benchmark.cpp  climateDataTesting.cpp  configurationTesting.cpp  convergence.cpp  dailyEnergyPlotter.cpp  efficiencyCorrelationPlotter.cpp  initialTest.cpp  lightfieldCombiner.cpp  ntupleCombiner.cpp  particleSwarmTesting.cpp  smartsIntegrationTesting.cpp
pvtree/: CMakeLists.txt  version.hpp.in
pvtree/analysis/: CMakeLists.txt  Linkdef.h  rootStyles.cpp  rootStyles.hpp  yearlyResult.cpp  yearlyResult.hpp
pvtree/climate/: CMakeLists.txt  climate.cpp  climate.hpp  climateData.cpp  climateData.hpp  climateFactory.cpp  climateFactory.hpp
pvtree/full/: CMakeLists.txt  actionInitialization.cpp  actionInitialization.hpp  commandRandomizeDetector.hpp  detectorConstruction.cpp  detectorConstruction.hpp  eventAction.cpp  eventAction.hpp  layeredLeafConstruction.cpp  layeredLeafConstruction.hpp  leafConstruction.cpp  leafConstruction.hpp  leafTrackerHit.cpp  leafTrackerHit.hpp  leafTrackerSD.cpp  leafTrackerSD.hpp  lightfieldGeneratorAction.cpp  lightfieldGeneratorAction.hpp  opticalPhysicsList.cpp  opticalPhysicsList.hpp  primaryGeneratorAction.cpp  primaryGeneratorAction.hpp  runAction.cpp  runAction.hpp  steppingAction.cpp  steppingAction.hpp  visualizationAction.cpp  visualizationAction.hpp  weightedParticleGun.cpp  weightedParticleGun.hpp
pvtree/geometry/: CMakeLists.txt  polygon.cpp  polygon.hpp  turtle.cpp  turtle.hpp  vertex.cpp  vertex.hpp
pvtree/leafSystem/: CMakeLists.txt  Linkdef.h  cordate.cpp  cordate.hpp  cordateConstruction.cpp  cordateConstruction.hpp  leafConstructionInterface.cpp  leafConstructionInterface.hpp  leafFactory.cpp  leafFactory.hpp  leafSystemInterface.hpp  planar.cpp  planar.hpp  planarConstruction.cpp  planarConstruction.hpp  rose.cpp  rose.hpp  roseConstruction.cpp  roseConstruction.hpp  simple.cpp  simple.hpp  simpleConstruction.cpp  simpleConstruction.hpp
pvtree/location/: CMakeLists.txt  locationDetails.cpp  locationDetails.hpp
pvtree/rootBasedSimulation/: CMakeLists.txt  leaf.cpp  leaf.hpp  rootGeometry.cpp  rootGeometry.hpp
pvtree/solpos/: CMakeLists.txt  solpos.c  solpos00.h
pvtree/test/: CMakeLists.txt  analysisPersistence.cpp  catch-main.cpp  catch.hpp  climateVariableAccess.cpp  configurationReading.cpp  geantSimulation.cpp  leafConstruction.cpp  locationAccess.cpp  selfLocation.cpp  smartsRunning.cpp  treeConstruction.cpp
pvtree/treeSystem/: CMakeLists.txt  Linkdef.h  helical.cpp  helical.hpp  helicalConstruction.cpp  helicalConstruction.hpp  monopodial.cpp  monopodial.hpp  monopodialConstruction.cpp  monopodialConstruction.hpp  stochastic.cpp  stochastic.hpp  stochasticConstruction.cpp  stochasticConstruction.hpp  stump.cpp  stump.hpp  stumpConstruction.cpp  stumpConstruction.hpp  sympodial.cpp  sympodial.hpp  sympodialConstruction.cpp  sympodialConstruction.hpp  ternary.cpp  ternary.hpp  ternaryConstruction.cpp  ternaryConstruction.hpp  treeConstructionInterface.cpp  treeConstructionInterface.hpp  treeFactory.cpp  treeFactory.hpp  treeSystemInterface.hpp
pvtree/utils/: CMakeLists.txt  equality.hpp  getRSS.cpp  getopt_pp.cpp  getopt_pp.h  loadGeant4Data.hpp.in  pvtree_binreloc.c  pvtree_binreloc.h.in  resource.cpp  resource.cpp.in  resource.hpp  signalReceiver.cpp  signalReceiver.hpp
scripts/: CMakeLists.txt  setup.sh.in
src/: CMakeLists.txt
src/analysis/: CMakeLists.txt  rootStyles.cpp  yearlyResult.cpp
src/climate/: CMakeLists.txt  climate.cpp  climateData.cpp  climateFactory.cpp
src/examples/: CMakeLists.txt  basicLightfieldSimulate.cpp  basicSimulate.cpp  basicVisualize.cpp  benchmark.cpp  bestTreeVisualizer.cpp  bestyearlyEnergyPlotter.cpp  climateDataTesting.cpp  configurationTesting.cpp  convergence.cpp  convergenceCombiner.cpp  convertYearly.cpp  converter.cpp  dailyEnergyPlotter.cpp  efficiencyCorrelationPlotter.cpp  initialTest.cpp  leafCheck.cpp  leafSimulate.cpp  leafVisualize.cpp  lightfieldCombiner.cpp  lightfieldTest.cpp  lightfieldTreeScan.cpp  materialConfigurationTest.cpp  ntupleCombiner.cpp  persistenceCheck.cpp  randomVisualize.cpp  smartsClimateAffect.cpp  smartsIntegrationTesting.cpp  treeScan.cpp  treeVisualizer.cpp  visualiseBestYearly.cpp  yearlyDiffuseLightfieldScan.cpp  yearlyEnergyPlotter.cpp  yearlyLightfieldScan.cpp  yearlyTreeScan.cpp
src/full/: CMakeLists.txt  actionInitialization.cpp  detectorConstruction.cpp  eventAction.cpp  layeredLeafConstruction.cpp  leafConstruction.cpp  leafTrackerHit.cpp  leafTrackerSD.cpp  lightfieldGeneratorAction.cpp  opticalPhysicsList.cpp  primaryGeneratorAction.cpp  runAction.cpp  steppingAction.cpp  visualizationAction.cpp  weightedParticleGun.cpp
src/geometry/: CMakeLists.txt  polygon.cpp  turtle.cpp  vertex.cpp
src/leafSystem/: CMakeLists.txt  cordate.cpp  cordateConstruction.cpp  leafConstructionInterface.cpp  leafFactory.cpp  planar.cpp  planarConstruction.cpp  rose.cpp  roseConstruction.cpp  simple.cpp  simpleConstruction.cpp
src/location/: CMakeLists.txt  locationDetails.cpp
super/: CMakeLists.txt
(+205 files in other folders)
